v0.9.6 Added documentation